Fixed navbar spacing

--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ section {
 
 /* Navigation Styling */
 nav {
+  position: fixed;
+  width: 100%;
+  z-index: 100;
   padding: 25px;
 }
 nav li {
